--------------------
Bazaar Release Notes
--------------------

.. contents::

bzr 1.6rc4 2008-08-18
---------------------

  BUG FIXES: 

    * Fix a regression in knit => pack fetching.  We had a logic
      inversion, causing the fetch to insert fulltexts in random order,
      rather than preserving deltas.  (John Arbash Meinel, #256757)


bzr 1.6rc3 2008-08-14
---------------------

  CHANGES:

    * Disable reading ``.bzrrules`` as a per-branch rule preferences
      file. The feature was not quite ready for a full release.
      (Robert Collins)

  IMPROVEMENTS:

    * Update the windows installer to bundle TortoiseBzr and ``qbzr``
      into the standalone installer. This will be the first official
      windows release that installs Tortoise by default.
      (Mark Hammond)

  BUG FIXES: 

    * Fix a regression in ``bzr+http`` support. There was a missing
      function (``_read_line``) that needed to be carried over from
      ``bzr+ssh`` support. (Andrew Bennetts)

    * ``GraphIndex`` objects will internally read an entire index if more
      than 1/20th of their keyspace is requested in a single operation.
      This largely mitigates a performance regression in ``bzr log FILE``
      and completely corrects the performance regression in ``bzr log``.
      The regression was caused by removing an accomodation which had been
      supporting the index format in use. A newer index format is in
      development which is substantially faster. (Robert Collins)


bzr 1.6rc2 2008-08-13
---------------------

This release candidate has a few minor bug fixes, and some regression
fixes for Windows.

  BUG FIXES:

    * ``bzr upgrade`` on remote branches accessed via bzr:// and
      bzr+ssh:// now works.  (Andrew Bennetts)

    * Change the ``get_format_description()`` strings for
      ``RepositoryFormatKnitPack5`` et al to be single line messages.
      (Aaron Bentley)

    * Fix for a regression on Win32 where we would try to call