@@ -4,6 +4,17 @@ Bazaar Release Notes
 
 .. contents::
 
+IN DEVELOPMENT
+--------------
+
+  BUG FIXES: 
+
+    * Disable automatic detection of stacking based on a containing
+      directory of the target. It interacted badly with push, and needs a
+      bit more work to get the edges polished before it should happen
+      automatically. (John Arbash Meinel, #259275)
+  
+
 bzr 1.6rc4 2008-08-18
 ---------------------
 
